# sjspama

./: docker-compose.yml  git_sync.bat  run_app.bat  start.sh
backend/: .env  Cargo.toml  dev.db
backend/migrations/: 20240101000000_init.sql  20240101000001_seed_admin.sql  20240101000003_add_unit_fields.sql  20240101000004_enhance_daily_logs.sql  20240101000005_create_employees_master.sql  20240101000006_enrich_employees_master.sql  20260410000000_fix_unit_types.sql  20260410000001_add_employee_fields.sql  20260410000002_change_licence_to_array.sql  20260410000003_add_type_licence_to_units.sql  20260413000000_create_work_locations.sql  20260413000001_create_operator_assignments.sql  20260413000002_create_positions_and_licenses.sql  20260413000003_add_employee_photo.sql  20260413000004_rename_unit_licence.sql
backend/scratch/: extract.js  sync_units.js
backend/src/: handlers.rs  main.rs  models.rs
data/: PT. SATRIA JAYA SULTRA - PAMA.xlsx  import_karyawan.py  inspect_excel.py
frontend/: README.md  package-lock.json  package.json
frontend/src/routes/: +layout.svelte  +page.svelte  layout.css
frontend/src/routes/assignments/: +page.svelte
frontend/src/routes/employees/: +page.svelte
frontend/src/routes/input/: +page.svelte
frontend/src/routes/licenses/: +page.svelte
frontend/src/routes/locations/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/positions/: +page.svelte
frontend/src/routes/profile/: +page.svelte
frontend/src/routes/reports/: +page.svelte
frontend/src/routes/units/: +page.svelte
scratch/: check_db.py
(+1 files in other folders)
